# limiting-factor

./: .arcconfig  Cargo.toml  Jenkinsfile  LICENSE  README.md
axum/: Cargo.toml  README.md
axum/src/: app.rs  lib.rs
axum/src/api/: guards.rs  mod.rs  replies.rs
core/: Cargo.toml
core/src/: app.rs  lib.rs
core/src/api/: guards.rs  mod.rs
rocket-legacy/: Cargo.toml  README.md
rocket-legacy/src/: kernel.rs  lib.rs
rocket-legacy/src/api/: guards.rs  replies.rs
src/: config.rs  database.rs  kernel.rs  lib.rs
src/api/: guards.rs  mod.rs  replies.rs
