[package]
name = "limiting-factor"
version = "0.1.0"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>",
]
description = "Helper code to create a Rest API with Diesel and Rocket"
license = "BSD-2-Clause"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.9.0"
log = "^0.4.4"
r2d2 = "^0.8.2"
rocket = "^0.3.16"
rocket_contrib = { version = "*", features = ["json"] }
