[package]
name = "limiting-factor"
version = "0.1.0"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>",
]
description = "Library to create a REST API with Diesel and Rocket"
readme = "README.md"
keywords = [
    "Diesel",
    "API",
    "Rocket",
    "REST",
]
categories = [
    "web-programming",
]
license = "BSD-2-Clause"
repository = "https://devcentral.nasqueron.org/source/limiting-factor/"

[dependencies]
diesel = { version = "^1.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.9.0"
log = "^0.4.4"
r2d2 = "^0.8.2"
rocket = "^0.3.16"
rocket_contrib = { version = "^0.3.16", features = [ "json" ] }
