[package]
name = "limiting-factor"
version = "0.7.1"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>",
]
description = "Library to create a REST API with Diesel and Rocket"
readme = "README.md"
keywords = [
    "Diesel",
    "API",
    "Rocket",
    "REST",
]
categories = [
    "web-programming",
]
license = "BSD-2-Clause"
repository = "https://devcentral.nasqueron.org/source/limiting-factor/"

[dependencies]
diesel = { version = "^1.0.0", features = ["postgres", "r2d2", "chrono"], optional = true }
dotenv = "0.9.0"
log = "^0.4.4"
r2d2 = { version = "^0.8.2", optional = true }
rocket = "^0.4.0"
rocket_contrib = { version = "^0.4.0", features = [ "json" ] }
serde = { version = "1.0", optional = true }

[features]
default = ["minimal"]

minimal = ["serialization"]
full = ["pgsql", "serialization"]

pgsql = ["diesel", "r2d2"]
serialization = ["serde"]
