[package]
name = "limiting-factor-axum"
version = "0.2.0"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>",
]
description = "Library to create a REST API with axum"
readme = "README.md"
keywords = [
    "API",
    "axum",
    "REST",
]
categories = [
    "web-programming",
]
license = "BSD-2-Clause"
repository = "https://devcentral.nasqueron.org/source/limiting-factor/"
edition = "2024"

[dependencies]
axum = "0.8.4"
limiting-factor-core = { path="../core", version="1.0.0" }
serde = { version = "^1.0.226", features = [ "derive" ], optional = true }
http-body-util = "0.1.3"
tokio = "1.47.1"
log = "0.4.28"

[features]
default = ["minimal"]

minimal = ["serialization"]
full = ["serialization"]

serialization = ["serde"]
