[package]
name = "limiting-factor"
version = "0.8.0"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>",
]
description = "Library to create a REST API with Diesel and Rocket"
readme = "README.md"
keywords = [
    "Diesel",
    "API",
    "Rocket",
    "REST",
]
categories = [
    "web-programming",
]
license = "BSD-2-Clause"
repository = "https://devcentral.nasqueron.org/source/limiting-factor/"
edition = "2015"

[dependencies]
diesel = { version = "^1.4.8", features = ["postgres", "r2d2", "chrono"], optional = true }
dotenv = "^0.15.0"
log = "^0.4.28"
r2d2 = { version = "^0.8.10", optional = true }
rocket = "^0.4.11"
rocket_contrib = { version = "^0.4.11", features = [ "json" ] }
serde = { version = "^1.0.226", features = [ "derive" ], optional = true }

[features]
default = ["minimal"]

minimal = ["serialization"]
full = ["pgsql", "serialization"]

pgsql = ["diesel", "r2d2"]
serialization = ["serde"]
